--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "zukeeper": "^1.0.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
